--- a/src/main/resources/templates/th/askBoard/askBoardDetail.html
+++ b/src/main/resources/templates/th/askBoard/askBoardDetail.html
@@ -22,9 +22,8 @@
                 </div>
                 <h1 class="qna-detail__content__header-title" th:text="${detail.askTitle}"></h1>
                 <address class="qna-detail-author qna-detail__content__header-author-section">
-                    <a class="qna-detail-author__profile-link" th:href="@{/member/memberProfile/{memberId}(memberId=${detail.memberId})}"><!--작성자 프로필링크-->
+                    <a class="qna-detail-author__profile-link" th:href="@{/member/memberProfile/{memberId}(memberId=${detail.memberId})}">
                         <div class="qna-detail-author__profile-link__image">
-                            <!--<img src="#" th:attr="srcset"> --><!--작성자 프로필 이미지 -->
                             <img th:if="${detail?.memberImg != null}" class="card-detail-writer__image" th:src="@{'/uploadImg'+${detail?.memberImg}}" style="width: 50px; height: 50px;"
                                  th:attr="srcset=|@{'/uploadImg'+${detail?.memberImg}} 1.5x,
                                                                         @{'/uploadImg'+${detail?.memberImg}} 2x,
@@ -41,11 +40,6 @@
                             <div class="qna-detail-author__profile-link__summary-introduction"></div>
                         </div>
                     </a>
-                    <div>
-                        <!--<button type="button" th:if="${member} != ${detail.memberId}"
-                                class="button button&#45;&#45;color-gray-4 button&#45;&#45;size-30 button&#45;&#45;shape-4"
-                                id="notesend" name="notesend">쪽지보내기</button>-->
-                    </div>
                 </address>
             </header>
             <section class="qna-detail__content__body">
@@ -64,7 +58,6 @@
                     </h1>
                     <form class="comment-feed__form" id="comment">
                         <div class="comment-feed__form__user">
-                            <!--<img src="#" th:attr="srcset">--><!-- 댓글 input 옆 이미지-->
                             <img th:if="${member?.memberImg != null}" class="comment-feed__item__content__author__image" alt=""
                                  th:src="@{'/uploadImg'+${member?.memberImg}}"
                                  th:attr="srcset=|@{'/uploadImg'+${member?.memberImg}} 1.5x,
@@ -94,9 +87,6 @@
                             <article class="comment-feed__item">
                                 <p class="comment-feed__item__content">
                                     <a th:href="@{/member/memberProfile/{memberId}(memberId=${aComment.memberId})}" class="comment-feed__item__content__author">
-                                        <!--<img class="comment-feed__item__content__author__image" th:alt="${aComment.memberId}"
-                                             src="#"
-                                             th:attr="srcset">-->
                                         <img th:if="${aComment?.memberImg != null}" class="comment-feed__item__content__author__image" alt="" th:src="@{'/uploadImg'+${aComment?.memberImg}}"
                                              th:attr="srcset=|@{'/uploadImg'+${aComment?.memberImg}} 1.5x,
                                                               @{'/uploadImg'+${aComment?.memberImg}} 2x,
@@ -142,7 +132,6 @@
                             </a>
                             <div th:if="${member.memberId} != ${detail.memberId}">
                                 <form action="/member/noteSending" method="post" id="sending" name="sending">
-                                <!--<a class="button button&#45;&#45;color-gray-4 button&#45;&#45;size-30 button&#45;&#45;shape-4">팔로우</a>-->
                                 <button th:if="${fcount == 0}"
                                         class="button button--color-gray-4 button--size-30 button--shape-4 card-detail-writer__follow"
                                         id="follow" name="follow">팔로우</button>
@@ -156,15 +145,6 @@
                                 </form>
                             </div>
                         </address>
-                        <!--<aside class="qna-detail-actions question__sidebar__actions">
-                            <div class="drop-down qna-detail-actions__wrapper">
-                                <button th:if="${member} != ${detail.memberId}"
-                                        class="button button&#45;&#45;color-gray-14-inverted button&#45;&#45;size-30 button&#45;&#45;shape-round qna-detail-actions__action"
-                                        type="button"  id=note" name="note">
-                                    <span class="qna-detail-actions__action__label">쪽지보내기</span>
-                                </button>
-                            </div>
-                        </aside>-->
                         <aside class="qna-detail-aside qna-detail__container__sidebar__aside">
                             <div class="qna-detail-aside__section">
                                 <button class="button button--color-gray-4 button--size-30 button--shape-4 card-detail-writer__follow"
@@ -183,59 +163,8 @@
             </div>
         </nav>
     </article>
-    <!--<div class="top-button qna-detail__back-to-top">
-        <svg class="top-button__icon" viewBox="0 0 34 34" preserveAspectRatio="xMidYMid meet">
-            <g fill="none" fill-rule="evenodd">
-                <rect width="33" height="33" x=".5" y=".5" fill="#FFF" stroke="#DBDBDB" rx="4"></rect>
-                <path fill="#DBDBDB" d="M10.5 20.4l-1.2-1.1 7.4-7.4.1.1.2-.1 7.3 7.4-1.1 1.1-6.4-6.3-6.3 6.3z"></path>
-            </g>
-        </svg>
-    </div>-->
 </main>
 </div>
-
-
-
-
-
-<!--<h2>게시글 상세</h2>
-<button id="update" th:onclick="'javascript:update('+${detail.askBoardNo}+');'">수정</button>
-<button class="btn btn-danger" th:onclick="'javascript:del('+${detail.askBoardNo}+');'">삭제</button>
-<button class="btn btn-primary" th:onclick="'javascript:reply('+${detail.askBoardNo}+');'">답변하기</button>
-
-
-<div clas="form-group">
-    <label>제목</label>
-    <th:block th:text="${detail.askTitle}"/>
-</div>
-<div clas="form-group">
-    <label>작성자</label>
-    <th:block th:text="${detail.memberId}"/>
-</div>
-<div clas="form-group">
-    <label>작성날짜</label>
-    <th:block th:text="${detail.askDate}"/>
-</div>
-<div clas="form-group">
-    <label>내용</label>
-    <th:block th:utext="${detail.askContent}"/>
-</div>
-
-<div class="form-group">
-    <form id="comment" method="post" name="comment">
-        <input type="text" id="commentContent" name="commentContent" placeholder="댓글을 입력하세요"/>
-        <input type="hidden" id="askBoardNo" nam="askBoardNo" th:value="${detail.askBoardNo}"/>
-        <input type="button" id="aCommentInsert" name="aCommentInsert" value="작성"/>
-    </form>
-    <tr th:each="aComment : ${askComment}">
-        <td th:text="${aComment.memberId}"></td>
-        <td th:text="${aComment.commentContent}"></td>
-        </th:each>
-    </tr>
-</div>-->
-
-
-
 </body>
 </html>
 
