--- a/src/main/resources/templates/th/member/mypage/profile/allFollow.html
+++ b/src/main/resources/templates/th/member/mypage/profile/allFollow.html
@@ -18,10 +18,9 @@
     <div class="container">
     <th:block th:replace="th/fragments/navBar_myPage"></th:block>
     <th:block th:replace="th/fragments/navBar_myPage_profile"></th:block>
-        <div id="body" class="users follower"  style="padding-bottom: 0px;"><!--data-s_id="2e12b330a1aa304540a66cfbadd4a9e0"-->
+        <div id="body" class="users follower"  style="padding-bottom: 0px;">
             <header id="user-header" class="user-header">
                 <div class="user-header__cover" style="background-image: url('https://image.ohou.se/image/resize/bucketplace-v2-development/uploads-default_images-default_user_cover4.jpg/2560/none')"></div>
-                <!--background-image: url(https://image.ohou.se/image/resize/bucketplace-v2-development/uploads-default_images-default_user_cover4.jpg/2560/none);-->
                 <img th:if="${member?.memberImg != null}" class="user-header__profile" th:src="@{'/uploadImg'+${member?.memberImg}}"
                      th:attr="srcset=|@{'/uploadImg'+${member?.memberImg}} 1.5x,
                                       @{'/uploadImg'+${member?.memberImg}} 2x,
@@ -40,7 +39,7 @@
                     </p>
                     <div th:if="${mem} != ${member.memberId}">
                     <button th:if="${fcount == 0}" class="btn user-header__btn user-header__btn--follow"
-                            id="follow" name="follow">팔로우</button><!--data-user="4247188" data-user는 오늘의집 내에서 idNumber 값인듯 지워도 될듯?-->
+                            id="follow" name="follow">팔로우</button>
                     <button th:if="${fcount == 1}" class="btn user-header__btn user-header__btn--follow"
                             id="followcancel" name="followcancel">팔로우취소</button>
                     <input type="hidden" id="memberId" name="memberId" th:value="${member.memberId}"/>
@@ -74,46 +73,14 @@
                                      th:attr="srcset=|@{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'} 1.5x,
                                                                         @{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'} 2x,
                                                                         @{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'} 3x|">
-                            </div><!-- 팔로워의 프로필 이미지 들어가야함 -->
-                            <div class="name" th:text="${follow.followId}"></div><!--class="card-detail-writer__image"--><!--STYLE="WIDTH: 30PX; HEIGHT: 30PX;"-->
+                            </div>
+                            <div class="name" th:text="${follow.followId}"></div>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!--<div id="scroll_to_top" style="bottom: 38px;">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 34 34">
-            <g fill="none" fill-rule="evenodd">
-                <rect width="33" height="33" x=".5" y=".5" fill="#FFF" stroke="#DBDBDB" rx="4"></rect>
-                <path fill="#DBDBDB" d="M10.5 20.4l-1.2-1.1 7.4-7.4.1.1.2-.1 7.3 7.4-1.1 1.1-6.4-6.3-6.3 6.3z"></path>
-            </g>
-        </svg>
-    </div>-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!-- <h2>팔로워</h2>
-        <div class="container">
-             <table class="table table-hover">
-                 <tr th:each="follower : ${follow}">
-                     <td th:text="${follower.followId}"></td>
-                     <td><input type="button" id="followcancel" name="followcancel" vlaue="팔로우취소"/></td>
-                 </tr>
-             </table>-->
-
 </div>
 </body>
 </html>
