--- a/src/main/resources/templates/th/fragments/adminHeader.html
+++ b/src/main/resources/templates/th/fragments/adminHeader.html
@@ -7,7 +7,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12 xs-12 md-auto">
                 <nav class="navbar navbar-icon-top navbar-expand-lg navbar-light" style="background-color: white;">
-                    <a class="navbar-brand logo-font" th:href="@{/}"><img th:src="@{/icon/thehouse.jpg}" class="rounded-circle" width=50px
+                    <a class="navbar-brand logo-font" th:href="@{/}"><img th:src="@{/icon/thehouse.png}" class="rounded-circle" width=50px
                                                           height=50px /> <b>니가사는그집</b></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -15,7 +15,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse sub-font" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
 
                             <li class="nav-item dropdown">
