--- a/src/main/resources/templates/th/login/customLogin.html
+++ b/src/main/resources/templates/th/login/customLogin.html
@@ -19,7 +19,7 @@
 
                 <div class="col-md-12 md-auto mt-4 mb-3">
                     <a th:href="@{/storeMain}">
-                        <img th:src="@{/icon/thehouse.jpg}" class="rounded-circle" width="70px" height="70px">
+                        <img th:src="@{/icon/thehouse.png}" class="rounded-circle" width="70px" height="70px">
                     </a>
                 </div>
 
