--- a/src/main/resources/templates/th/login/signup.html
+++ b/src/main/resources/templates/th/login/signup.html
@@ -14,7 +14,7 @@
         <div class="login_wrapper">
             <div class="text-center logo-font">
                 <div class="col-md-12 md-auto mt-4 mb-3">
-                    <img th:src="@{/icon/thehouse.jpg}" class="rounded-circle" width="70px" height="70px">
+                    <img th:src="@{/icon/thehouse.png}" class="rounded-circle" width="70px" height="70px">
                 </div>
 
 
