--- a/src/main/resources/static/css/mainContent.css
+++ b/src/main/resources/static/css/mainContent.css
@@ -13,7 +13,7 @@
         border-radius: 100px;
     }
 }
-@media all and (min-width: 1650px) and (max-width: 1749px) {
+@media all and (min-width: 1650px) and (max-width: 1799px) {
     .fixed-btn-area {
         position: -webkit-sticky;
         position: sticky;
@@ -49,6 +49,7 @@
         width: 50px;
         background: #35c5f0;
         height: 50px;
+        left: 10px;
         z-index: 99999;
         padding: 13px;
         border-radius: 100px;
@@ -61,6 +62,7 @@
         width: 50px;
         background: #35c5f0;
         height: 50px;
+        left: 30px;
         z-index: 99999;
         padding: 13px;
         border-radius: 100px;
