--- a/src/main/resources/templates/th/admin/statAdmin/memberInfo.html
+++ b/src/main/resources/templates/th/admin/statAdmin/memberInfo.html
@@ -10,6 +10,7 @@
 <body>
 <div id="wrapper">
     <div layout:fragment="content">
+        <div class="container">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
@@ -48,6 +49,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 
