--- a/src/main/resources/templates/th/admin/statAdmin/memberOrderList.html
+++ b/src/main/resources/templates/th/admin/statAdmin/memberOrderList.html
@@ -9,6 +9,7 @@
 <body>
 <div id="wrapper">
     <div layout:fragment="content">
+        <div class="container">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
@@ -55,6 +56,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 </div>
