--- a/src/main/resources/templates/th/admin/statAdmin/popularityProduct.html
+++ b/src/main/resources/templates/th/admin/statAdmin/popularityProduct.html
@@ -9,6 +9,7 @@
 <body>
 <div class="container" id="wrapper">
     <div layout:fragment="content">
+        <div class="container">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
@@ -17,7 +18,7 @@
                         <div class="card-body">
                             <div class="table-responsive">
                                 제품관리
-                                <table class="table table-hover">
+                                <table class="table table-hover" >
                                     <thead>
                                     <tr>
                                         <th>count</th>
@@ -41,6 +42,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 </div>
